--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "author": "Michael Wang",
   "license": "ISC",
+  "engines": {
+    "node": "12.6.0"
+  },
   "bugs": {
     "url": "https://github.com/michaelwang23/OpenPen/issues"
   },
