--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
-    "mongoose": "^5.6.11"
+    "mongoose": "^5.6.11",
+    "nodemon": "^1.19.1"
   }
 }
