--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/michaelwang23/OpenPen#readme",
   "dependencies": {
+    "aylien_textapi": "^0.7.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.11",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "unirest": "^0.6.0"
   }
 }
