--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.11",
     "nodemon": "^1.19.1",
+    "popups": "^1.1.3",
     "unirest": "^0.6.0"
   }
 }
